--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,9 +6,23 @@ body {
     padding: 0;
 }
 
+#header {
+    background: #33A;
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#header #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container {
     width: 70%;
-    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -16,4 +30,8 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    padding: 1em;
 }
